# OOP

./: README.md  pyproject.toml
src/: category.py  main.py  product.py  product_iterator.py  utils.py
tests/: conftest.py  test_category.py
